Vistas de administración: dashboard y detalle escuela listo para pruebas

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -14,9 +14,9 @@
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
             <li class="uk-nav-header">Menú</li>
             <li class="uk-parent uk-open">
-                <h:link><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image" pt:uk-svg=""/></h:link>
+                <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/>Escuelas</a>
                 <ul class="uk-nav-sub">
-                    <li><h:link outcome="administracion-dashboard"><h:outputText pt:uk-icon="home" class="uk-margin-small-right"/>Dashboard</h:link></li>
+                    <li><a><h:outputText pt:uk-icon="home" class="uk-margin-small-right"/>Dashboard</a></li>
                 </ul>
             </li>
             <li class="uk-parent">
